--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
+  font-family: times;
+  margin: 5em;
 }
 
 h1 {
-  font-style: italic;
-  color: #373fff;
+  font-style: bold;
+  color: red;
 }
