🐙🍞 Checkpoint ./index.html:38505739/433 ./style.css:38505739/180

--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: times;
+  font-family: calibri;
   margin: 5em;
+  padding: 10px;
+  text-align: center;
+  background: #EBC8B2;
 }
 
 h1 {
   font-style: bold;
-  color: red;
+  color: white;
 }
