--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 5rem;
   margin: 5em;
-  color: #3D2314;
+  color: #EBC8B2;
 
   
 }
@@ -20,7 +20,7 @@ body {
 
   line-height:inherit;
   white-space:nowrap;
-  color: white;
+  color: #EBC8B2;
   
 }
 
