😅👨‍❤️‍💋‍👨 Checkpoint ./portfolio/style.css:38505739/22

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 5rem;
   margin: 5em;
-  color: #EBC8B2;
+  color: #white;
 
   
 }
@@ -20,7 +20,7 @@ body {
 
   line-height:inherit;
   white-space:nowrap;
-  color: #EBC8B2;
+  color: #white;
   
 }
 
