--- a/style.css
+++ b/style.css
@@ -5,9 +5,13 @@ body {
   margin: 5em;
   padding: 10px;
   text-align: center;
-  background: #EBC8B2;
+  background: white;
 }
-
+body {
+    background-image: url(https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fflat-geometric-background_23-2148957201.jpg?v=1636610817859);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 h1 {
   font-style: bold;
   color: white;
