--- a/style.css
+++ b/style.css
@@ -2,17 +2,22 @@
 
 body {
   font-family: calibri;
+  padding-top: 5rem;
   margin: 5em;
-  padding: 10px;
   text-align: center;
   background: white;
 }
 body {
-    background-image: url(https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2Fflat-geometric-background_23-2148957201.jpg?v=1636610817859);
+    background-image: url(https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2FScreen%20Shot%202021-11-10%20at%2010.13.01%20PM.png?v=1636611207196);
     background-repeat: no-repeat;
     background-size: cover;
 }
 h1 {
   font-style: bold;
   color: white;
+}
+
+p {
+  color: white;
+
 }
