🏟👖 Checkpoint ./index.html:38505739/577 ./style.css:38505739/234 ./portfolio/index.html:38505739/541 ./.glitch-assets:38505739/2608

--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 
 body {
   font-family: calibri;
-  padding-top: 5rem;
+  padding-top: 250px;
   margin: 5em;
   text-align: center;
   background: white;
 }
 body {
-    background-image: url(https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2FScreen%20Shot%202021-11-10%20at%2010.13.01%20PM.png?v=1636611207196);
+    background-image: url(https://cdn.glitch.me/0ec6ce21-231c-4146-8e5a-e5718f5a22f1%2F042921.jpg?v=1636610661650);
     background-repeat: no-repeat;
     background-size: cover;
 }
