--- a/style.css
+++ b/style.css
@@ -22,3 +22,16 @@ p {
   font-family: "Calibre", sans-serif;
 
 }
+
+.header img {
+  float: left;
+  width: 100px;
+  height: 100px;
+  background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
+}
