🚕🎾 Checkpoint ./style.css:38505739/124

--- a/style.css
+++ b/style.css
@@ -43,3 +43,15 @@ p {
   padding-top: 96px;
   padding-bottom: 140px;
 }
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
