--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: "Calibre", sans-serif;
+  font-family: 'ubuntu', sans-serif;
   padding-right: 200px;
   padding-left: 200px;
   
@@ -13,14 +13,14 @@ body {
 }
 
 h1 {
-  font-style: normal;
-  font-family: "Calibre", sans-serif;
+  font-style: bold;
+  font-family:'ubuntu', sans-serif;
   font-weight: 500;
 }
 
 p {
   font-style: normal;
-  font-family: "Calibre", sans-serif;
+  font-family: 'ubuntu', sans-serif;
 
 }
 
