🚁🏊🏼 Checkpoint ./index.html:38505739/9258 ./style.css:38505739/799

--- a/style.css
+++ b/style.css
@@ -35,14 +35,17 @@ body {
 }
 
 .column {
-  float: center;
-  width: 100%;
-  padding: 5px;
+  float: left;
+  width: 50%;
 }
 
-.row::after {
+/* Clear floats after the columns */
+.row:after {
   content: "";
-  clear: both;
   display: table;
-  p
+  clear: both;
 }
+.column {
+  float: left;
+}
+
