🎩🐗 Checkpoint ./index.html:38505739/11864 ./.glitch-assets:38505739/797 ./style.css:38505739/132

--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ body {
   padding-bottom: 140px;
 }
 
+.card {
+  padding-right: 30px;
+    padding-left: 30px;
+  
+    
+}
+
 .column {
   float: left;
   width: 50%;
