--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   
   margin: 3em;
   text-align: center;
-  background: #f4f4f4;
+  background: #ffffff;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -54,5 +54,11 @@ body {
 }
 .column {
   float: left;
+  padding: 10px;
 }
 
+@media screen and (max-width: 600px;) {
+  .column {
+    width: 100%;
+  }
+}
