🙍🏄 Checkpoint ./style.css:38505739/99 ./index.html:38505739/381

--- a/style.css
+++ b/style.css
@@ -57,8 +57,12 @@ body {
   padding: 10px;
 }
 
-@media screen and (max-width: 600px;) {
+@media screen and (max-width: 1000px;) {
   .column {
     width: 100%;
   }
+}
+  @media screen and (max-width: 1000px) {
+  ul. li.right, 
+  ul. li {float: none;}
 }
