--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   
   padding-right: 50px;
-  padding-left: 50px;
+  padding-left: 160px;
   
   margin: 3em;
   text-align: center;
@@ -44,6 +44,7 @@ body {
 .column {
   float: left;
   width: 50%;
+  padding-bottom: 50px;
 }
 
 /* Clear floats after the columns */
@@ -55,7 +56,7 @@ body {
 
 @media screen and (max-width: 800px) {
   .column {
-    width: 50%;
+    width: 25%;
   }
 }
   @media screen and (max-width: 800px) {
