🎠👬 Checkpoint ./bio.html:38505739/15776 ./portfolio/works.html:38505739/11229 ./portfolio/whosdown.html:38505739/11230 ./portfolio/website.html:38505739/11225 ./portfolio/glitch.html:38505739/11226 ./portfolio/gif.html:38505739/11220 ./portfolio/drawings.html:38505739/11230 ./portfolio/style.css:38505739/1748

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -12,14 +12,16 @@ body {
   background-size: cover;
 }
 
-
-
-
+.body img{
+  width: 100%;
+  padding-bottom: 50px;
+}
 
 
 .header img {
   float: left;
-  width: 100%;
+  width: 60%;
+  padding-bottom: 30px;
   
 }
 
