--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body {
 }
 
 .body img{
-  width: 100%;
-  padding-bottom: 50px;
+  width: 50%;
 }
 
 
@@ -47,6 +46,7 @@ body {
   float: left;
   width: 50%;
   padding-bottom: 50px;
+  padding-right: 50px;
 }
 
 /* Clear floats after the columns */
