--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -49,6 +49,12 @@ body {
   padding-bottom: 50px;
   padding-right: 50px;
 }
+.column2 {
+  float: left;
+  width: 100%;
+  padding-bottom: 50px;
+  padding-right: 50px;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -59,6 +65,9 @@ body {
 
 @media screen and (max-width: 800px) {
   .column {
+    width: 25%;
+  }
+  .column2 {
     width: 25%;
   }
 }
