--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 .body img{
   width: 50%;
+  padding-bottom: 50px;
 }
 
 
@@ -31,7 +32,8 @@ body {
 }
 
 .section{
-  padding-bottom: 30px;
+  padding-top: 96px;
+  padding-bottom: 20px;
 }
 
 .card {
@@ -44,6 +46,13 @@ body {
 .column {
   float: left;
   width: 50%;
+  padding-bottom: 50px;
+  padding-right: 50px;
+}
+.column2 {
+  float: left;
+  width: 100%;
+  padding-bottom: 50px;
   padding-right: 50px;
 }
 
@@ -56,6 +65,9 @@ body {
 
 @media screen and (max-width: 800px) {
   .column {
+    width: 25%;
+  }
+  .column2 {
     width: 25%;
   }
 }
